fix it in the popout. align it in the popout.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@12955 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -195,6 +195,10 @@ $over-color: #f4f3f3;
 
 				&.add-group-action {
 					background: none;
+
+					.input-wrap {
+						left: -5px;
+					}
 				}
 
 				a {
